[project]
name = "blackmarblepy"
description = "Georeferenced Rasters of Nighttime Lights from NASA Black Marble data"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["nighttime lights", "nasa black marble", "world bank"]
requires-python = ">=3.10"
dynamic = ["version"]

authors = [
	{ name = "World Bank", email = "github@worldbank.org" }
]

maintainers = [
	{ name = "Gabriel Stefanini Vicente", email = "gvicente@worldbank.org" },
	{ name = "Robert Marty", email = "rmarty@worldbank.org" },
]

classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
	"aiohttp>=3.12.7",
	"geopandas<2",
	"h5py>=3.13.0",
	"httpx>=0.28.1",
	"humanize>=4.12.3",
	"ipywidgets<9",
	"nest_asyncio<2",
	"numpy>=1.21.0,<3",
	"pandas>=2,<3",
	"pqdm>=0.2.0",
	"pydantic>2,<3",
	"rasterio>=1,<2",
	"rasterstats>=0.20.0",
	"rioxarray>=0.15.1,<0.18.0",
	"tenacity>=9.1.2",
	"tqdm>=4.67.1",
	"xarray>=0.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[project.optional-dependencies]
docs = [
	"docutils==0.17.1",               # https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=0.15.1",
	"sphinxcontrib-apidoc>=0.4.0,<1",
]
examples = [
    "bokeh>=3.7.3",
    "colorcet>=3.1.0",
    "contextily>=1.6.2",
    "folium>=0.19.7",
    "mapclassify>=2.8.1",
    "python-dotenv>=1.1.0",
    "watermark>=2.5.0",
]
tests = [
	"pytest"
]

[project.urls]
"Homepage" = "https://worldbank.github.io/blackmarblepy"
"Bug Reports" = "https://github.com/worldbank/blackmarblepy/issues"
"Source" = "https://github.com/worldbank/blackmarblepy"

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/blackmarble"]

[tool.codespell]
skip = 'docs/_build,docs/references.bib,__pycache__,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
